# pystream-record

./: pyproject.toml  raw
pystreamkey_record/: raw  record_kps.py
pystreamkey_record/assets/: proc1-1
pystreamkey_record/assets/raws/: raw1  raw2-bad  raw3-vimcnf+wm+qb+chat
tests/: test_streamkey_corpus.py
