[tool.poetry]
name = "pystreamkey_record"
version = "0.1.0"
description = ""
authors = ["Bietola <dincio.montesi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
keyboard = "^0.13.5"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pystreamk-record = "pystreamkey_record.record_kps:cli"
